# trabalho_final_integracao_sistemas

./: .env  README.md  deploy.sh  docker-compose.yml  dockerfile  package-lock.json  package.json
AUTH_API/: .env.example
AUTH_API/config/: auth.php
AUTH_API/routes/: api.php
DATABASE/: Dockerfile  README.md
auth_api/: .env.docker  .env.example  .gitignore  000-default.config  Dockerfile  README.md  composer.json
auth_api/docker/: vhost.conf
auth_api/src/: index.php
contracts/: README.md  index.js  package-lock.json  package.json
contracts/specs/: auth_api.yaml  receive_send_api.yaml  record_api.yaml
database/: Dockerfile  README.md
database/sql/: 1_create_tables.sql
integration/: .env.example  README.md  [DevOps-Integração de Sistemas].postman_collection.json  index.js  package-lock.json  package.json
integration/collections/: integration.json
integration/sql/: setup.sql  teardown.sql
receive-send-api/: .env.example  README2.md  dockerfile  package-lock.json  package.json
record-api/: .env.docker  .env.example  Dockerfile  README.md  docker-compose.yml  postman_collection.json  pyproject.toml
record-api/src/record_api/: __init__.py
record-api/src/record_api/config/: env.py  health.py  redis_client.py
record-api/src/record_api/dtos/: message_response.py  save_message_request.py  save_message_response.py
record-api/src/record_api/model/: database.py  message_model.py
record-api/src/record_api/routers/: message_router.py
record-api/src/record_api/services/: message_service.py
src/: app.js  app.module.ts  server.js
(+54 files in other folders)
